# cafeina-z1

./: .dockerignore  .env.example  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Pack.lua  README.md  a.js  dev.sh  example.z1  main.lua  package-lock.json  package.json  run.sh  setup.sql  tsconfig.app.json  vite.config.ts  z1.txt
api/: Cargo.toml  config.rs  main.rs
api/db/: conn.rs  mod.rs  table.rs
api/models/: element.rs  molecula.rs
api/routes/: route_element.rs  route_molecula.rs  route_search.rs
api/src/: config.rs  db.rs  main.rs
api/src/models/: element.rs  mod.rs  molecula.rs
api/src/routes/: mod.rs  route_molecula.rs
api/src/tools/: mod.rs  z1.rs
api/tools/: z1.rs
database/: table_element.sql  table_molecula.sql
examples/: acido_citrico.z1  acido_nitrico.z1  acido_sulfurico.z1  agua.z1  amonia.z1  aspartato.z1  benzeno.z1  bicarbonato_de_sodio.z1  bis2cloroetioeter.z1  capsaicina.z1  carbonato_de_calcio.z1  cinamaldeido.z1  etanol.z1  fenol.z1  metano.z1  tetrafluoretileno.z1  trifluoreto_de_boro.z1
patterns/: CHHdown.pre.z1  CHHup.pre.z1  trigonal_plana.pre.z1
web/: index.html
web-svelte/: index.html  package-lock.json  package.json
web-svelte/src/: App.svelte
web/src/: App.svelte  app.css  config.ts  main.ts  style.css  util.ts
z1/: Config.min.lua  Handling.lua  Handling.min.lua  Print.lua  Print.min.lua  Repl.lua  Repl.min.lua  Sql.lua  z1.min.lua
z1/patterns/: tetraedrica.pre.z1
z1/plugins/: Plugin.lua  Plugin.min.lua  StandardPlugin.min.lua  Z13Plugin.lua  Z13Plugin.min.lua
z1/tools/: Svg.lua  (+6 more)
z13d/: index.html
(+40 files in other folders)
