[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name="api"
path = "api/main.rs"

[dependencies]
tracing-subscriber = "0.3.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.40" 
axum = "0.8.3"
libsql = "0.9.4"
tempfile = "3.19.1"
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["cors","fs"] }
tower = "0.5.2"