[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.19"
tokio = { version = "1", features = ["full"] }
axum = "0.8.3"
libsql = "0.9.4"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.40" 
dotenvy = "0.15.7"
mlua = { version = "0.10.3", features = ["lua54", "vendored", "async", "send"] }